--- a/statics/less/main.less
+++ b/statics/less/main.less
@@ -14,10 +14,56 @@
 @import 'components/toast.less';
 @import 'components/pop.less';
 
-.bg-img( @url , @width, @height ) {
-    .px2rem(width, @width);
-    .px2rem(height, @height);
+.bg-img( @url ) {
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-image: url('../images/page/cupDraw/@{url}.png');
+    background-image: url('../images/@{url}.png');
+}
+
+/***页面样式*****/
+
+.main-html{
+    min-height: 100%;
+    height: 100%;
+    body{
+        min-height: 100%;
+        height: 100%;
+        width: 100%;
+        .bg-img('main-bg');
+    }
+
+    /***主页面***/
+    .main-body{
+        .pr();
+
+        .list-btn{
+            .pa();
+            left: 50%;
+            width: 100%;
+            text-align: center;
+            transform: translateX(-50%);
+            .px2rem(bottom,60);
+
+            &>div{
+                display:inline-block;
+                .px2rem(width,421);
+                .px2rem(height,133);
+                .px2rem(margin-bottom,30);
+
+                &:last-child{
+                    margin-bottom:0;
+                }
+                &.beginBtn{
+                   .bg-img('begingame-btn');
+                }
+                &.rewardBtn{
+                    .bg-img('reward-btn');
+                }
+                &.ruleBtn{
+                    .bg-img('rules-btn');
+                }
+            }
+
+        }
+    }
 }
