--- a/statics/less/main.less
+++ b/statics/less/main.less
@@ -32,10 +32,18 @@
         .bg-img('main-bg');
     }
 
+    .goback{
+        .px2rem(width,147);
+        .px2rem(height,94);
+        .bg-img('goback-btn');
+        .pa();
+        .px2rem(top,10);
+        .px2rem(left,10);
+    }
+
     /***主页面***/
     .main-body{
         .pr();
-
         .list-btn{
             .pa();
             left: 50%;
@@ -64,6 +72,99 @@
                 }
             }
 
+        }
+    }
+
+    /**规则页面**/
+    .rules-body{
+        .pr();
+        .rules-wrap{
+            .pa();
+            left: 50%;
+            top:50%;
+            transform: translate(-50%,-50%);
+            .px2rem(width,650);
+            background:#ffffbd;
+            .borderradius1(8);
+            box-sizing: border-box;
+            .padding(30,30,30,30);
+            
+            .title{
+                text-align: center;
+                line-height: 1;
+                .px2rem(padding-bottom,15);
+                color: #664106;
+                .px2px(font-size,48);
+                border-bottom: 1px solid #7a5a1e;
+                .px2rem(margin-bottom,24);
+                font-weight: bold;
+            }
+            .content{
+                .padding(45,45,45,45);
+                background: #e5e58f;
+                .borderradius1(8);
+                color: #664106;
+                .px2px(font-size,40);
+                line-height: 1.3;
+            }
+        }
+    }
+
+    /***中奖名单**/
+    .reward-body{
+        .pr();
+        .reward-wrap{
+            .pa();
+            left: 50%;
+            top:50%;
+            transform: translate(-50%,-50%);
+            .px2rem(width,650);
+            background:#ffffbd;
+            .borderradius1(8);
+            box-sizing: border-box;
+            .padding(50,20,20,20);
+            .tip{
+                .pa();
+                z-index: 10;
+               .px2rem(width,343);
+               .px2rem(height,90);
+               left: 50%;
+               transform: translateX(-50%);
+                .px2rem(top,-70);
+                .bg-img('reward');
+            }
+            .title{
+                text-align: center;
+                color: #664106;
+                .px2px(font-size,42);
+                .px2rem(margin-bottom,24);
+                font-weight: bold;
+                line-height: 1.2;
+            }
+            .content{
+                .padding(10,0,30,20);
+                box-sizing: border-box;
+                .px2rem(height,632);
+                overflow-y: scroll;
+                background: #e5e58f;
+                .borderradius1(8);
+                color: #664106;
+                .px2px(font-size,40);
+                line-height: 1.3;
+
+                .name{
+                    text-align: center;
+                    color:#664106;
+                    .px2px(font-size,40);
+                    .px2rem(margin-bottom,30);
+                    font-weight: bold;
+                }
+                li{
+                    color:#664106;
+                    .px2px(font-size,40); 
+                    .px2rem(margin-bottom,10);
+                }
+            }
         }
     }
 }
