--- a/statics/less/main.less
+++ b/statics/less/main.less
@@ -334,7 +334,8 @@
                .px2rem(line-height,96);
                text-align: center;
                color: #fff;
-               .px2px(font-size,34);              
+               .px2px(font-size,30);   
+               white-space: nowrap;           
                &.active{
                    .bg-img('list-selected');
                }
