添加公众号二维码
1

--- a/statics/less/main.less
+++ b/statics/less/main.less
@@ -463,6 +463,31 @@
                     }
                 }
             }
+
+            .flow-wrap{
+                text-align: center;
+                .px2rem(margin-left,30);
+                .px2rem(margin-right,30);
+
+                .tip{
+                    color: #000;
+                    .px2px(font-size,40);
+                    line-height: 1.3;
+                    color: #664106;
+                    .px2rem(margin-bottom,20);
+                }
+                .erweima{
+                    display:block;
+                    .px2rem(width,420);
+                    .px2rem(height,421);
+                    margin-left: auto;
+                    margin-right:auto;
+                     img{
+                         display:block;
+                         width: 100%;
+                     }
+                }
+            }
             
         }
     }
