--- a/statics/less/main.less
+++ b/statics/less/main.less
@@ -547,26 +547,15 @@
     .login-body{
         .px2rem(padding-top,130);
         height: auto;
+        .background('../images/select-bg.png');
         .wrap{
             .px2rem(width,649);
-            .borderradius1(8);
-            background: #ffffbd;
+            .background('../images/loginmain-bg.png');           
             box-sizing: border-box;
-            .px2rem(padding-left,20);
-            .px2rem(padding-right,20);
             .px2rem(padding-top,30);
             .px2rem(padding-bottom,80);
             margin-left: auto;
             margin-right: auto;
-            .pr();
-
-            .title{
-                text-align: center;
-                line-height: 1.4;
-                color: #664106;
-                .px2px(font-size,48);
-                border-bottom: 1px solid #664106;
-            }
 
             .login-btn{
                 margin-left: auto;
@@ -583,16 +572,17 @@
                 .px2rem(margin-bottom,100);
             }
             .info{
-                text-align: center;
-                color: #664106;
-                .px2px(font-size,28);
+                text-align: left;
+                color: #fff;
+                .px2px(font-size,25);
                 line-height: 1.4;
+                .px2rem(padding-left,60);
             }
 
             .form{
                 margin-left: auto;
                 margin-right: auto;
-                .px2rem(margin-top,60);
+                .px2rem(margin-top,240);
 
                 .input{
                     .clearfix();
@@ -604,7 +594,7 @@
                         .px2rem(height,65);
                         .px2rem(line-height,65);
                         .px2px(font-size,36);
-                        color: #664106;
+                        color: #fff;
                         .px2rem(margin-right,10);
                     }
                     .input1{
@@ -613,8 +603,8 @@
                         box-sizing: border-box;
                         .px2rem(padding-left,15);
                         .fl();
-                        background: #ffffd1;
-                        border: 1px solid #f8e396;
+                        background: #fff;
+                        border: 1px solid #afc8d6;
                         .borderradius1(8);
                         color: #664106;
                     }
@@ -624,8 +614,8 @@
                         box-sizing: border-box;
                         .px2rem(padding-left,15);
                         .fl();
-                        background: #ffffd1;
-                        border: 1px solid #f8e396;
+                        background: #fff;
+                        border: 1px solid #afc8d6;
                         .borderradius1(8);
                         .px2rem(margin-right,25);
                         color: #664106;
@@ -641,14 +631,14 @@
                     
                 }
                 .tip{
-                    text-align: right;
-                    .px2px(font-size,30);
-                    color: #664106;
+                    
+                    text-align: center;
+                    .px2px(font-size,35);
+                    color: #fff;
                     line-height: 1.3;
-                    .px2rem(margin-right,60);
-
+                    .px2rem(margin-top,40);
                     span{
-                        border-bottom:1px solid #664106;
+                        border-bottom:1px solid #fff;
                     }
 
                 }
