--- a/statics/less/main.less
+++ b/statics/less/main.less
@@ -259,21 +259,25 @@
             margin-right:auto;
             box-sizing: border-box; 
             .background('../images/rules-bg.png');
+            //background:rgba(0,0,0,0.7);
            .px2rem(padding-top,200);
             
             .content{
                 .padding(0,100,50,100);
                 color: #fff;
-                .px2px(font-size,35);
-                line-height: 1.3;
+                .px2px(font-size,30);
+                line-height: 1.2;
                 box-sizing: border-box;
                 .px2rem(height,650);
                 overflow-y: scroll;
-
                 li{
                     .clearfix();
                     span{
-                        .fl();
+                       display:block;
+                       .px2px(font-size,35);
+                       .px2rem(margin-top,20);
+                       text-align: center;
+                       .px2rem(margin-bottom,30);
                     }
                     p{
                         overflow: hidden;
@@ -438,29 +442,37 @@
         }
         .item{
           .px2rem(width,690);
-          .px2rem(height,96);
           box-sizing: border-box;
           margin-left: auto;
           margin-right: auto;
-          .px2rem(padding-left,54);
-          .px2rem(padding-right,54);
+          .px2rem(padding-left,30);
+          .px2rem(padding-right,30);
           .bg-img('list-bg');
           .px2rem(margin-top,20);
           .px2rem(margin-bottom,40);
           font-weight: bold;
+          .px2rem(padding-top,20);
+          .px2rem(padding-bottom,20);
           &:nth-child(4){
               .px2rem(margin-bottom,80);
           }
-           .name{
-               .px2rem(height,96);
+           .name{             
                .px2rem(width,164);
-               .px2rem(line-height,96);
                text-align: center;
                color: #fff;
                .px2px(font-size,30);   
-               white-space: nowrap;           
+               white-space: nowrap;    
+               .pr();                     
                &.active{
-                   .bg-img('list-selected');
+                  background:rgba(0,0,0,0.4);
+                 .teamimg{
+                   .opacity(0.4);
+                }
+               }
+               .teamimg{
+                   .px2rem(height,96);
+                   display:block;
+                   width: 100%;
                }
            }
            .info{
